src/graph/snapshots/hopr_api__graph__function__tests__forward_first_edge_scales_by_immediate_score.snap
---
source: src/graph/function.rs
expression: "ValueResult\n{ observations: obs, initial_value: 2.0, path_index: 0, result_value: cost }"
---
observations:
  immediate:
    connected: true
    score: 0.95
    ack_rate: 0.9
  intermediate:
    balance: "1000"
    score: 0.95
initial_value: 2
path_index: 0
result_value: 1.71
