src/graph/snapshots/hopr_api__graph__function__tests__forward_first_edge_unknown_balance.snap
---
source: src/graph/function.rs
expression: "ValueResult\n{\n    direction, path_length, path_index, observations, initial_value,\n    result_value,\n}"
---
direction: forward
path_length: 3
path_index: 0
observations:
  immediate:
    connected: true
    score: 0.95
    ack_rate: 0.9
  intermediate:
    balance: ~
    score: 0.95
initial_value: 1
result_value: -1
